Finished Forms for front-end api connection

--- a/tm-frontend/src/Components/style.css
+++ b/tm-frontend/src/Components/style.css
@@ -90,3 +90,13 @@ button:focus {
 .locations {
     padding: 30px;
 }
+
+.editForms {
+    padding: 30px;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.floatLeft {
+    float: left;
+}
